--- a/client/main.css
+++ b/client/main.css
@@ -1,6 +1,7 @@
 html, body {
   background-color: #eee;
   height: 100%;
+  font-family: Lato;
 }
 
 #login .login-link-text{
@@ -9,4 +10,9 @@ html, body {
 
 #login {
   z-index: 1000;
+}
+
+.main-toolbar {
+  /* background-color: #eee !important; */
+  border:none;
 }
