wip sur les groupes de projet

--- a/client/main.css
+++ b/client/main.css
@@ -28,3 +28,10 @@ html, body {
     display: none;
   }
 }
+
+.absolute-right {
+  position: fixed;
+  right: 24px;
+  bottom: 24px;
+  z-index: 1002;
+}
