--- a/client/main.css
+++ b/client/main.css
@@ -38,3 +38,7 @@ html, body {
 .md-tabs-content {
   height: 100% !important;
 }
+
+.projects-timeline .timeline .vis-item .vis-item-content {
+  padding: 0;
+}
