Correction de l'affichage du scroll sous windows

--- a/client/main.css
+++ b/client/main.css
@@ -5,6 +5,10 @@ html, body {
   font-family: 'Inter';
 }
 
+html {
+  overflow-y: auto !important;
+}
+
 #login .login-link-text{
   color: white;
 }
