--- a/client/main.css
+++ b/client/main.css
@@ -34,6 +34,12 @@ html {
   }
 }
 
+
+.vis-item .vis-item-overflow {
+  overflow: visible;
+}
+
+/* Projects timeline */
 .projects-timeline .vis-item {
   border: none;
   background-color: transparent;
@@ -41,10 +47,6 @@ html {
 
 .projects-timeline .vis-item .vis-item-content {
   padding: 0;
-}
-
-.vis-item .vis-item-overflow {
-  overflow: visible;
 }
 
 .projects-timeline .timeline-custom-item {
@@ -56,13 +58,35 @@ html {
 }
 
 .projects-timeline .vis-item.vis-selected .timeline-custom-item {
-  /* filter: drop-shadow(0px 2px 1px #555); */
   font-weight: bold;
 }
 
 .projects-timeline .timeline-custom-item-default-colors {
   background-color: #b3d4fc;
 }
+
+/* project (tasks) timeline */
+.project-timeline .vis-item {
+}
+
+.project-timeline .vis-item .vis-item-content {
+}
+
+.project-timeline .timeline-custom-item {
+  border-radius: 4px;
+  min-height: 32px;
+  line-height: 32px;
+  margin:0; 
+  padding:5px;   
+}
+
+.project-timeline .vis-item.vis-selected .timeline-custom-item {
+  font-weight: bold;
+}
+
+.project-timeline .timeline-custom-item-default-colors {
+}
+
 
 p {
   margin-bottom: 0px !important;
